@startuml

package libocpp {
  class ChargePoint {
    - device_model: DeviceModel
  }

  class DeviceModel {
    - device_model: DeviceModelStorageInterface
    + get_device_model(): DeviceModelRepresentation
    + get_value(...): T
    + set_value(...): SetVariableStatusEnum
  }

  interface DeviceModelStorageInterface {
    + get_device_model(): DeviceModelRepresentation
    + get_variable_attribute(...): std::optional<VariableAttribute>
    + set_variable_attribute_value(...): bool
  }

  class DeviceModelStorageSqlite implements DeviceModelStorageInterface
}

package EVerest {
  class EverestDeviceModelStorage implements libocpp.DeviceModelStorageInterface
  class ComposedDeviceModelStorage implements libocpp.DeviceModelStorageInterface {
      - everest_storage: EverestDeviceModelStorage
      - libocpp_storage: DeviceModelStorageSqlite
  }
}

ChargePoint *-- DeviceModel
DeviceModel *-- DeviceModelStorageInterface
ComposedDeviceModelStorage *-- EverestDeviceModelStorage
EverestDeviceModelStorage *-- DeviceModelStorageSqlite

@enduml